updated hobbies and gaols

--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,8 @@
                 Social Media Management and Administration.
               </p>
               <p class="about-wrapper__info-text">
-                Extra Information about you! like hobbies and your goals.
+                My hobbies include: scuba diving, reading, gardening, fitness, hiking, fising, traveling, music, upgrading computers and fishkeeping.
+                My goal is to become a successfull web /software developer and start my own IT and farming business in Denmark.
               </p>
               <span class="d-flex mt-3">
                 <a
