--- a/src/index.html
+++ b/src/index.html
@@ -79,8 +79,8 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                Child of God, Vegetarian, PC Gamer, lover of Technology, 
-                Social Media Management and Administration.
+                I am a diligent, loyal, well organized, and detail oriented candidate with 6 years of experience in Administration, 2 years’ 
+                experience and training in Sage One Accounting and I am currently studying Web Development.
               </p>
               <p class="about-wrapper__info-text">
                 My hobbies include: scuba diving, reading, gardening, fitness, hiking, fising, traveling, music, upgrading computers and fishkeeping.
@@ -164,14 +164,11 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 1</h3>
+                <h3 class="project-wrapper__text-title">Smart Brain</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                   This is my first ever full stack project, done through ZTM udemy course, we used clarify api face recognition
+                   and react, deployment for this app was done on Heroku
                   </p>
                 </div>
                 <a
@@ -186,7 +183,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://smart-brain-jk.herokuapp.com/"
                 >
                   Source Code
                 </a>
@@ -194,7 +191,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
+                <a rel="noreferrer" href="https://github.com/Jenique22/smartbrain.git" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -205,7 +202,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="Smartbrain.png"
                     />
                   </div>
                 </a>
