added more info

--- a/src/index.html
+++ b/src/index.html
@@ -79,8 +79,9 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                I am a diligent, loyal, well organized, and detail oriented candidate with 6 years of experience in Administration, 2 years’ 
-                experience and training in Sage One Accounting and I am currently studying Web Development.
+                I am a structured, loyal, detail oriented candidate with a deep egerness to learn, 6 years of experience in Administration, 2 years’ 
+                experience and training in Sage One Accounting, 1 year experience in Marketing.
+                I have decided to start a new career path to finally persue my passion for technology and I have recently finished a Full Stack Web Development course on Udemy.
               </p>
               <p class="about-wrapper__info-text">
                 My hobbies include: scuba diving, reading, gardening, fitness, hiking, fising, traveling, music, upgrading computers and fishkeeping.
@@ -175,7 +176,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://smart-brain-jk.herokuapp.com/"
                 >
                   See Live
                 </a>
@@ -183,15 +184,23 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="https://smart-brain-jk.herokuapp.com/"
+                  href="https://github.com/Jenique22/smartbrain"
                 >
                   Source Code
+                </a>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/Jenique22/smartbrain-api"
+                >
+                  Source Code Api
                 </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="https://github.com/Jenique22/smartbrain.git" target="_blank">
+                <a rel="noreferrer" href="#!" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -202,7 +211,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="Smartbrain.png"
+                      src="./assets/Smartbrain.png"
                     />
                   </div>
                 </a>
