--- a/src/index.html
+++ b/src/index.html
@@ -79,9 +79,11 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                I am a structured, loyal, detail oriented candidate with a deep egerness to learn, 6 years of experience in Administration, 2 years’ 
+                I am a structured, loyal, detail oriented candidate with a deep egerness to learn, 6 years of experience in Administration, 2 year's 
                 experience and training in Sage One Accounting, 1 year experience in Marketing.
                 I have decided to start a new career path to finally persue my passion for technology and I have recently finished a Full Stack Web Development course on Udemy.
+                I am doing my second and final year of Uschool of ministry which an indepth bible theology study and leadership study, were we are being taught how to be an 
+                authentic learder and lead in any enviroment as well as business fundementals, this course has been created by NBA students who are the pastors and lecturers of this course.
               </p>
               <p class="about-wrapper__info-text">
                 My hobbies include: scuba diving, reading, gardening, fitness, hiking, fising, traveling, music, upgrading computers and fishkeeping.
