added social media links

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,4 @@
-<!--
-  Hello!
-  -
-  Simplefolio is a clean and responsive portfolio template for Developers!
-  Created by Jacobo Martinez.
-  -
-  Github Repo: https://github.com/cobidev/simplefolio/
-  Readme: https://github.com/cobidev/simplefolio/README.md
-  -
-  For business & inquires, contact me -> jacobojavier98@gmail.com
--->
+
 <!DOCTYPE html>
 <html lang="en" class="sr">
   <head>
@@ -81,9 +71,9 @@
               <p class="about-wrapper__info-text">
                 I am a structured, loyal, detail oriented candidate with a deep egerness to learn, 6 years of experience in Administration, 2 year's 
                 experience and training in Sage One Accounting, 1 year experience in Marketing.
-                I have decided to start a new career path to finally persue my passion for technology and I have recently finished a Full Stack Web Development course on Udemy.
+                I have decided to start a new career path to finally persue my passion for technology and I have recently finished a Full Stack Web Development course on Udemy and I am curently doing an other course on how to become a senior developer.
                 I am doing my second and final year of Uschool of ministry which an indepth bible theology study and leadership study, were we are being taught how to be an 
-                authentic learder and lead in any enviroment as well as business fundementals, this course has been created by NBA students who are the pastors and lecturers of this course.
+                authentic learder and lead in any enviroment as well as business fundementals, this course has been created by NBA students who are the pastors and lecturers of this course. My moto is "always be teachable".
               </p>
               <p class="about-wrapper__info-text">
                 My hobbies include: scuba diving, reading, gardening, fitness, hiking, fising, traveling, music, upgrading computers and fishkeeping.
@@ -226,14 +216,10 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 2</h3>
+                <h3 class="project-wrapper__text-title">Project under construction</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    Busy coding an other project
                   </p>
                 </div>
                 <a
@@ -290,7 +276,7 @@
             rel="noreferrer"
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
+            href="mailto:jenique82@gmail.com"
             >Call to Action</a
           >
         </div>
@@ -305,13 +291,13 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a rel="noreferrer" href="#!" target="_blank">
-            <i class="fa fa-twitter fa-inverse"></i>
+          <a rel="noreferrer" href="https://www.facebook.com/jenique.knoesen" target="_blank">
+            <i class="fa fa-facebook fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://www.linkedin.com/in/jenique-knoesen-9a8060178/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://github.com/Jenique22" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
@@ -326,29 +312,6 @@
           >
         </p>
 
-        <!-- TO DO: remove this entire paragraph once you finish your portfolio -->
-        <p class="mt-3 pt-3">
-          <a
-            rel="noreferrer"
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio/fork"
-            data-icon="octicon-repo-forked"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Fork ntkme/github-buttons on GitHub"
-            >Fork</a
-          >
-          <a
-            rel="noreferrer"
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio"
-            data-icon="octicon-star"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Star cobidev/simplefolio on GitHub"
-            >Star</a
-          >
-        </p>
       </div>
     </footer>
     <!-- /END Footer Section -->
