updated png images

--- a/src/index.html
+++ b/src/index.html
@@ -143,7 +143,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/Robofriends.png"
+                      src="assets/Robo Friends.png"
                      
                     />
                   </div>
@@ -203,7 +203,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="./assets/Smartbrain.png"
+                      src="./assets/Smart brain.png"
                     />
                   </div>
                 </a>
@@ -271,13 +271,13 @@
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
+          <p class="contact-wrapper__text">Give me a call on 0713562955 or send me and email below</p>
           <a
             rel="noreferrer"
             target="_blank"
             class="cta-btn cta-btn--resume"
             href="mailto:jenique82@gmail.com"
-            >Call to Action</a
+            >Email</a
           >
         </div>
       </div>
