--- a/src/index.html
+++ b/src/index.html
@@ -69,10 +69,10 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                I am a structured, loyal, detail oriented candidate with a deep egerness to learn, 6 years of experience in Administration, 2 year's 
-                experience and training in Sage One Accounting, 1 year experience in Marketing.
-                I have decided to start a new career path to finally persue my passion for technology and I have recently finished a Full Stack Web Development course on Udemy and I am curently doing an other course on how to become a senior developer.
-                I am doing my second and final year of Uschool of ministry which an indepth bible theology study and leadership study, were we are being taught how to be an 
+                I am a structured, loyal, detail oriented candidate with a deep egerness to learn, 6-7 years of experience in Administration, 2 year's 
+                experience and training in Sage One Accounting, 1-2 years experience in Marketing.<br/>
+                I have decided to start a new career path to finally persue my passion for technology and recently finished a Full Stack Web Development course on Udemy, I am curently doing an other course on how to become a senior developer.<br/>
+                I am doing my second and final year of Uschool of ministry which is an indepth bible theology study and leadership study, were we are being taught how to be an 
                 authentic learder and lead in any enviroment as well as business fundementals, this course has been created by NBA students who are the pastors and lecturers of this course. My moto is "always be teachable".
               </p>
               <p class="about-wrapper__info-text">
