--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="assets/me.jpg"
+                src="assets/megif.gif"
                 alt="Profile Image"
               />
             </div>
