Added grammor and details

--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
-    <!-- Todo: put here your site title -->
     <title> Jenique Knoesen | Developer</title>
-    <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
-    <meta name="keywords" content="Jenique22, Jenique, skill" />
-    <!-- Todo: improve your SEO by adding a small description of you -->
-    <meta name="description" content=" Jenique Knoesen | Developer" />
+    
+    <meta name="We Developer" content="Jenique22, Jenique, skill" />
+    <meta name="Full Stack Web Developer with a passion for technology" content=" Jenique Knoesen | Developer" />
 
     <link
       rel="stylesheet"
@@ -24,12 +22,7 @@
       src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"
     ></script>
 
-    <!-- Todo: remove the below script once you finish your portfolio -->
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
-  </head>
-
-  <!-- Todo: read the following HTML Todos to create your stunning portfolio website -->
-  <body>
+    <body>
     <div id="top"></div>
 
     <!-- **** Hero Section **** -->
@@ -69,15 +62,14 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                I am a structured, loyal, detail oriented candidate with a deep eagerness to learn, 6-7 years of experience in Administration, 2 year's 
-                experience and training in Sage One Accounting, 1-2 years experience in Marketing.<br/>
-                I have decided to start a new career path to finally persue my passion for technology and recently finished a Full Stack Web Development course on Udemy, I am curently doing an other course on how to become a senior developer.<br/>
-                I am doing my second and final year of Uschool of ministry which is an indepth bible theology study and leadership study, were we are being taught how to be an 
-                authentic learder and lead in any enviroment as well as business fundementals, this course has been created by MBA students who are the pastors and lecturers of this course. My moto is "always be teachable".
+                I am a structured, loyal, detail-oriented candidate with a deep eagerness to learn, 6-7 years of experience in Administration, 2 years experience and training in Sage One Accounting, 1-2 years experience in Marketing.
+                I have decided to start a new career path to finally pursue my passion for technology and recently finished a Full Stack Web Development course on Udemy, I am currently doing another course on how to become a senior developer.
+                I am doing my second and final year of Uschool of ministry which is an in-depth bible theology study and leadership study, where we are being taught how to be authentic leaders and lead in any environment as well as business fundamentals, this course has been created by 
+                NBA students who are the pastors and lecturers of this course. My motto is "always be teachable".
               </p>
               <p class="about-wrapper__info-text">
-                My hobbies include: scuba diving, reading, gardening, fitness, hiking, fishing, traveling, music, upgrading computers and fishkeeping.
-                My goal is to become a successfull web /software developer and start my own IT and farming business in Denmark.
+                My hobbies include scuba diving, reading, gardening, fitness, hiking, fishing, traveling, music, upgrading computers, and fishkeeping. 
+                My goal is to become a successful web /software developer and start my own IT and farming business in Denmark.
               </p>
               <span class="d-flex mt-3">
                 <a
