--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                I am a structured, loyal, detail-oriented candidate with a deep eagerness to learn, 6-7 years of experience in Administration, 2 years experience and training in Sage One Accounting, 1-2 years experience in Marketing.<br/>
+                I am a structured, loyal, detail-oriented candidate with a deep eagerness to learn, 6-7 years of experience in Administration, 2 years experience and training in Sage One Accounting, 1-2 years experience in Marketing.<br>
                 I have decided to start a new career path to finally pursue my passion for technology and recently finished a Full Stack Web Development course on Udemy, I am currently doing another course on how to become a senior developer.
                 I am doing my second and final year of Uschool of ministry which is an in-depth bible theology study and leadership study, where we are being taught how to be authentic leaders and lead in any environment as well as business fundamentals, this course has been created by 
                 NBA students who are the pastors and lecturers of this course. My motto is "always be teachable".
