--- a/src/index.html
+++ b/src/index.html
@@ -200,6 +200,54 @@
             </div>
           </div>
 
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">Start Up</h3>
+                <div>
+                  <p class="mb-4">
+                    Created a startup landing page through the Udemy course, were we learned how to use bootstrap, containers and mailchimp.
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://jenique22.github.io/"
+                >
+                  See Live
+                </a>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/Jenique22/Jenique22.github.io"
+                >
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer" href="#!" target="_blank">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+
       
           <div class="row">
             <div class="col-lg-4 col-sm-12">
