--- a/src/index.html
+++ b/src/index.html
@@ -240,56 +240,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/"
-                    />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-
-      
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Cars.Com</h3>
-                <div>
-                  <p class="mb-4">
-                    Created a simple front page to the website, with animation.
-                  </p>
-                </div>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--hero"
-                  href="https://jenique22.github.io/Cars.Com/"
-                >
-                  See Live
-                </a>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn text-color-main"
-                  href="https://github.com/Jenique22/Cars.Com"
-                >
-                  Source Code
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
-                  <div
-                    data-tilt
-                    data-tilt-max="4"
-                    data-tilt-glare="true"
-                    data-tilt-max-glare="0.5"
-                    class="thumbnail rounded js-tilt"
-                  >
-                    <img
-                      alt="Project Image"
-                      class="img-fluid"
-                      src="assets/Cars.Com.png"
+                      src="assets/Start Up.png"
                     />
                   </div>
                 </a>
