--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="assets/Jenique Knoesen CV.pdf"
+                  href="assets/Jenique Knoesen CV 2023.pdf"
                 >
                   View Resume
                 </a>
