--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
                     </div>
               
                     <div class="item">
-                      <img src="assets/Graduation.jpg" class="mx-auto" alt="Chania" width="300" height="auto">
+                      <img src="assets/Graduation2022.jpg" class="mx-auto" alt="Chania" width="300" height="auto">
                     </div>
               
                     <div class="item">
